<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:example="http://schemas.android.com/apk/res/com.ioptime.dgrabs" >

    <PreferenceCategory
        android:key="key_map_category"
        android:title="@string/map" >
        <ListPreference
            android:defaultValue="Normal"
            android:entries="@array/lbl_array_view_type"
            android:entryValues="@array/lbl_array_view_type"
            android:key="@string/preferences_type"
            android:layout="@layout/setting"
            android:summary="Normal"
            android:title="@string/view_type" />

        <com.ioptime.dgrabs.setting.PreferenceZoom
            android:defaultValue="10"
            android:dialogTitle="@string/zoom_dialog_title"
            android:key="@string/preferences_zoom"
            android:layout="@layout/setting"
            android:persistent="true"
            android:summary="@string/zoom_summary"
            android:title="@string/zoom_dialog_title"
            example:maxValue="15"
            example:minValue="1" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="key_help_category"
        android:title="@string/help" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preferences_overlay"
            android:layout="@layout/setting"
            android:title="@string/overlay_title" />
    </PreferenceCategory>

</PreferenceScreen>