<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView" >

        <LinearLayout
            android:id="@+id/lytMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_share"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtWhatDoYouThink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:hint="@string/hint_share"
                android:lines="5" />

            <TextView
                android:id="@+id/lblShareTo"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/lbl_share_to"
                android:textColor="@color/text_title"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/layout_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblFacebook"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/chk_facebook"
                    android:textColor="@color/text_sub_title" />

                <CheckBox
                    android:id="@+id/chkFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/apptheme_btn_check_holo_light" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_twiiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblTwitter"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/chkTwitter"
                    android:text="@string/chk_twiiter"
                    android:textColor="@color/text_sub_title" />

                <CheckBox
                    android:id="@+id/chkTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/apptheme_btn_check_holo_light" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnShare"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_share"
                android:layout_marginTop="@dimen/margin_share"
                android:background="@drawable/apptheme_btn_default_holo_light"
                android:text="@string/btn_share"
                android:textColor="@color/text_btn"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnOtherApps"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_btn_default_holo_light"
                android:text="@string/btn_other_apps"
                android:textColor="@color/text_btn" />
        </LinearLayout>
    </ScrollView>

    <!--
         com.google.android.gms.ads.AdView
	    android:id="@+id/adView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    ads:adUnitId="@string/admob_id"
	    ads:adSize="SMART_BANNER"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"/
    -->

</RelativeLayout>